# portfolio-expert

./: .gitignore  Agent Workflow.md  Holding Input Template.md  Investment Assistant - Index.md  Investment Assistant MVP PRD.md  Investment Constitution v0.1.md  Knowledge Base Sources.md  MVP Development Task Breakdown.md  Next Development Roadmap.md  Portfolio Rules.md  README.md  Trade Log Template.md  Weekly Investment Review Template.md
Assets/: investment-assistant-architecture.html
Config/: portfolio_rules.v1.yaml
Development Logs/: Development Log - Index.md  IA-DEV-20260602-001 Project Documentation Baseline.md  IA-DEV-20260602-002 Portfolio Rules Review.md  IA-DEV-20260602-003 MVP CLI Diagnostic Engine.md  IA-DEV-20260602-004 Real Portfolio Diagnostic Run.md  IA-DEV-20260602-005 Next Development Roadmap.md  IA-DEV-20260602-006 Development Log System.md  IA-DEV-20260602-007 Ticker Metadata Configuration.md  IA-DEV-20260602-008 Metadata Ticker Expansion.md  IA-DEV-20260602-009 Broker Summary CSV Normalization.md  IA-DEV-20260602-010 Structured Diagnosis Result.md  (+2 more)
investment-assistant/: .gitignore  pyproject.toml
investment-assistant/config/: ticker_metadata.v1.yaml
investment-assistant/data/: portfolio_summary.csv
investment-assistant/examples/: current_holdings.csv  holdings.sample.csv
investment-assistant/src/investment_assistant/: __init__.py  cli.py  diagnosis.py  portfolio.py  report.py  rules.py
investment-assistant/tests/: test_diagnosis.py  test_metadata.py  test_portfolio.py  test_report_cli.py  test_rules.py
(+1 files in other folders)
